@@ -1,13 +1,11 @@
 package com.deego.service;
 
-import com.deego.config.*;
-import com.deego.enums.DatabaseType;
-import com.deego.enums.NodeType;
-import com.deego.enums.PlaceholderType;
+import com.deego.config.DbConfig;
+import com.deego.config.NodeDef;
+import com.deego.config.TreeConfigLoader;
 import com.deego.exception.BizException;
+import com.deego.model.Connection;
 import com.deego.model.Folder;
-import com.deego.model.TreeNode;
-import com.deego.utils.BeanUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -16,267 +14,225 @@ import org.springframework.stereotype.Service;
 import java.util.*;
 import java.util.stream.Collectors;
 
-@Service
+/**
+ * Nodes-registry tree engine with back-compat getTreeData().
+ */
 @Slf4j
+@Service
 public class TreeService {
 
-	@Autowired
-	private ConnectionService connectionService;
+    @Autowired
+    private TreeConfigLoader configLoader;
 
-	@Autowired
-	private TreeConfigLoader configLoader;
+    @Autowired
+    private ConnectionService connectionService;
 
-	@Autowired
-	private BeanUtils beanUtils;
+    @Autowired
+    private com.deego.utils.BeanUtils beanUtils;
 
-	@Autowired
-	private FolderService folderService;
+    @Autowired
+    private FolderService folderService;
 
-	public List<Map<String, Object>> getTreeData() {
-		List<TreeNode> rootNodes = new ArrayList<>();
-		List<Folder> rootFolders = folderService.getRootFolders();
-		for (Folder folder : rootFolders) {
-			rootNodes.add(buildFolderTree(folder));
-		}
+    /** /api/config/tree 需要的根树：Folders + Root Connections */
+    public List<Map<String, Object>> getTreeData() {
+        List<Map<String, Object>> roots = new ArrayList<>();
+        // folders
+        for (Folder f : folderService.getRootFolders()) {
+            roots.add(buildFolderMap(f));
+        }
+        // root connections
+        for (Connection conn : connectionService.getAllConnections().stream()
+                .filter(c -> c.getParentId() == null).toList()) {
+            roots.add(connectionNodeMap(conn));
+        }
+        return roots;
+    }
 
-		List<com.deego.model.Connection> rootConns = connectionService.getAllConnections().stream()
-																	  .filter(c -> c.getParentId() == null)
-																	  .collect(Collectors.toList());
-		for (com.deego.model.Connection conn : rootConns) {
-			TreeNode connNode = toTreeNode(conn);
-			connNode.setChildren(loadExtraLevelsAsTreeNodes(conn.getId()));
-			rootNodes.add(connNode);
-		}
+    private Map<String, Object> buildFolderMap(Folder folder) {
+        Map<String, Object> m = new LinkedHashMap<>();
+        m.put("id", folder.getId());
+        m.put("key", String.valueOf(folder.getId()));
+        m.put("name", folder.getName());
+        m.put("type", "folder");
+        m.put("icon", null);
+        m.put("virtual", true);
+        m.put("connected", true);
+        List<Map<String,Object>> children = new ArrayList<>();
 
-		return rootNodes.stream()
-						.map(beanUtils::beanToMap)
-						.collect(Collectors.toList());
-	}
+        for (Folder cf : folderService.getChildFolders(folder.getId())) {
+            children.add(buildFolderMap(cf));
+        }
+        for (Connection c : connectionService.getAllConnections().stream()
+                .filter(c -> c.getParentId() != null && c.getParentId().equals(folder.getId()))
+                .toList()) {
+            children.add(connectionNodeMap(c));
+        }
+        m.put("children", children);
+        return m;
+    }
 
-	private TreeNode buildFolderTree(Folder folder) {
-		TreeNode folderNode = toTreeNodeFromFolder(folder);
-		List<Folder> childFolders = folderService.getChildFolders(folder.getId());
-		List<TreeNode> childNodes = new ArrayList<>();
-		for (Folder childFolder : childFolders) {
-			childNodes.add(buildFolderTree(childFolder));
-		}
-		List<com.deego.model.Connection> childConns = connectionService.getAllConnections().stream()
-																	   .filter(c -> c.getParentId() != null && c.getParentId().equals(folder.getId()))
-																	   .toList();
-		for (com.deego.model.Connection conn : childConns) {
-			TreeNode connNode = toTreeNode(conn);
-			connNode.setChildren(loadExtraLevelsAsTreeNodes(conn.getId()));
-			childNodes.add(connNode);
-		}
-		folderNode.setChildren(childNodes);
-		return folderNode;
-	}
+    private Map<String, Object> connectionNodeMap(Connection conn) {
+        Map<String, Object> m = new java.util.LinkedHashMap<>();
+        m.put("id", conn.getId());                 // 只返回连接层级
+        m.put("key", conn.getId());
+        m.put("name", conn.getName() != null ? conn.getName() : conn.getId());
+        m.put("type", "connection");
+        m.put("icon", null);                       // 不写死；前端按 dbType 映射图标
+        m.put("dbType", conn.getDbType());        // 关键：让前端映射出大象/海豚等
+        m.put("virtual", false);
+        m.put("connected", conn.getConnected() != null ? conn.getConnected() : Boolean.TRUE);
+        m.put("children", new java.util.ArrayList<>()); // 不预载虚拟节点
+        return m;
+    }
 
-	public List<Map<String, Object>> loadChildren(String connIdStr, String path) {
-		log.debug("Loading children for connId={}, path={}", connIdStr, path);  // 优化：加日志
-		JdbcTemplate jdbc = connectionService.getJdbcTemplate(connIdStr);
-		DbConfig dbConfig = configLoader.getDbConfig(getDbType(connIdStr));
 
-		List<TreeNode> children = new ArrayList<>();
-		String[] segments = Objects.isNull(path) ? new String[0] : path.split("/");
-		Level currentLevel = findCurrentLevel(dbConfig.getLevels(), segments);
+    /** Expand children for a given connection/path using the nodes registry. */
+    public List<Map<String, Object>> loadChildren(String connId, String path) {
+        Connection conn = connectionService.getConnection(connId).orElseThrow(() -> new BizException("Connection not found: " + connId));
+        DbConfig db = configLoader.getDbConfig(conn.getDbType());
+        if (db == null) throw new BizException("DbConfig not found for dbType " + conn.getDbType());
+        LinkedHashMap<String, NodeDef> reg = db.getNodes();
+        if (reg == null || reg.isEmpty()) return List.of();
 
-		try {
-			if (currentLevel.getGroupBy() != null && !currentLevel.getGroupBy().isEmpty()) {
-				for (Map.Entry<String, GroupByConfig> entry : currentLevel.getGroupBy().entrySet()) {
-					String groupKey = entry.getKey();
-					GroupByConfig group = entry.getValue();
-					TreeNode groupNode = createVirtualGroupNode(groupKey, group, path, jdbc, connIdStr);
-					children.add(groupNode);
-				}
-			} else {
-				String sql = replacePlaceholders(currentLevel.getSqlQuery(), segments);
-				List<Map<String, Object>> rows = jdbc.queryForList(sql);
-				for (Map<String, Object> row : rows) {
-					TreeNode node = createLeafNode(row, currentLevel, path, connIdStr);
-					children.add(node);
-				}
-			}
+        if (path == null || path.isBlank()) {
+            return reg.entrySet().stream()
+                    .filter(e -> e.getValue().getParent() == null)
+                    .sorted(Comparator.comparingInt(e -> Optional.ofNullable(e.getValue().getPosition()).orElse(0)))
+                    .map(e -> toNodeMap(conn, e.getKey(), e.getValue(), null))
+                    .collect(Collectors.toList());
+        }
+        List<String> segs = new ArrayList<>(Arrays.asList(path.split("/")));
+        String nodeKey = segs.get(0);
+        NodeDef def = reg.get(nodeKey);
+        if (def == null) throw new BizException("Unknown node key: " + nodeKey);
 
-			NodeType pathType = NodeType.fromPath(path);
-			if (pathType == NodeType.CONNECTION) {
-				children.addAll(loadExtraLevelsAsTreeNodes(connIdStr));
-			}
+        if (segs.size() == 1) {
+            return expandNode(conn, reg, nodeKey, def, null);
+        }
+        String entityId = segs.get(1);
+        return expandEntity(conn, reg, nodeKey, def, entityId);
+    }
 
-			return children.stream()
-						   .map(beanUtils::beanToMap)
-						   .collect(Collectors.toList());
+    private List<Map<String, Object>> expandNode(Connection conn, LinkedHashMap<String, NodeDef> reg, String nodeKey, NodeDef def, String parentId) {
+        if (def.isVirtual() && def.getChildren() != null && !def.getChildren().isEmpty()) {
+            return def.getChildren().entrySet().stream()
+                    .map(e -> {
+                        String childKey = e.getValue();
+                        NodeDef childDef = reg.get(childKey);
+                        return toNodeMap(conn, childKey, childDef, parentId);
+                    }).collect(Collectors.toList());
+        }
+        if (def.isVirtual() && def.getNextLevel() != null) {
+            String nextKey = def.getNextLevel();
+            NodeDef nextDef = reg.get(nextKey);
+            return queryList(conn, reg, nextKey, nextDef, parentId, Collections.emptyMap());
+        }
+        if (!def.isVirtual()) {
+            return queryList(conn, reg, nodeKey, def, parentId, Collections.emptyMap());
+        }
+        return List.of();
+    }
 
-		} catch (Exception e) {
-			log.error("加载子节点失败 for connId={}, path={}: ", connIdStr, path, e);  // 优化：加上下文日志
-			throw new BizException(e);
-		}
-	}
+    private List<Map<String, Object>> expandEntity(Connection conn, LinkedHashMap<String, NodeDef> reg, String nodeKey, NodeDef def, String entityId) {
+        if (!def.isVirtual()) {
+            if (def.getNextLevel() != null) {
+                NodeDef next = reg.get(def.getNextLevel());
+                if (next == null) return List.of();
+                if (next.getChildren() != null && !next.getChildren().isEmpty()) {
+                    return next.getChildren().entrySet().stream()
+                            .map(e -> {
+                                String childKey = e.getValue();
+                                NodeDef childDef = reg.get(childKey);
+                                String id = conn.getId() + "::" + childKey + "::" + entityId;
+                                Map<String, Object> m = toNodeMap(conn, childKey, childDef, entityId);
+                                m.put("id", id);
+                                m.put("key", id);
+                                Map<String, Object> cfg = (Map<String, Object>) m.get("config");
+                                if (cfg != null && childDef.getNextLevel() != null) {
+                                    cfg.put("nextLevel", childDef.getNextLevel());
+                                }
+                                return m;
+                            }).collect(Collectors.toList());
+                }
+                if (next.getNextLevel() != null) {
+                    NodeDef deeper = reg.get(next.getNextLevel());
+                    return queryList(conn, reg, def.getNextLevel(), deeper, entityId, Map.of("entityId", entityId));
+                }
+            }
+            return List.of();
+        }
+        return expandNode(conn, reg, nodeKey, def, entityId);
+    }
 
-	private List<TreeNode> loadExtraLevelsAsTreeNodes(String connId) {
-		List<TreeNode> extras = new ArrayList<>();
-		DbConfig dbConfig = configLoader.getDbConfig(getDbType(connId));
-		JdbcTemplate jdbc = connectionService.getJdbcTemplate(connId);
+    private List<Map<String, Object>> queryList(Connection conn, LinkedHashMap<String, NodeDef> reg, String nodeKey, NodeDef def, String parentId, Map<String, Object> params) {
+        if (def == null || def.getSqlQuery() == null) return List.of();
+        JdbcTemplate jdbc = connectionService.getJdbcTemplate(conn.getId());
+        String sql = def.getSqlQuery();
+        if (params.containsKey("entityId")) {
+            sql = sql.replace("{entityId}", String.valueOf(params.get("entityId")));
+        }
+        if (parentId != null) {
+            sql = sql.replace("{parentId}", parentId);
+        }
+        sql = sql.replace("{dbName}", conn.getDatabase());
 
-		if (dbConfig.getExtraLevels() != null && !dbConfig.getExtraLevels().isEmpty()) {
-			for (Map.Entry<String, ExtraLevel> entry : dbConfig.getExtraLevels().entrySet()) {
-				String extraKey = entry.getKey();
-				ExtraLevel extra = entry.getValue();
-				if (NodeType.CONNECTION.getValue().equals(extra.getPosition())) {
-					try {
-						String sql = replacePlaceholders(extra.getSqlQuery(), new String[0]);
-						List<Map<String, Object>> rows = jdbc.queryForList(sql);
-						for (Map<String, Object> row : rows) {
-							TreeNode node = createLeafNode(row, extra, "", connId);  // 修复：parentPath = ""
-							extras.add(node);
-						}
-					} catch (Exception e) {
-						log.error("加载额外层级失败 for extraKey={}, connId={}: ", extraKey, connId, e);  // 优化：加日志
-					}
-				}
-			}
-		}
-		return extras;
-	}
+        List<Map<String, Object>> rows = jdbc.queryForList(sql);
+        List<Map<String, Object>> out = new ArrayList<>(rows.size());
+        for (Map<String, Object> r : rows) {
+            Map<String, Object> m = new LinkedHashMap<>();
+            String id = String.valueOf(r.getOrDefault("id", java.util.UUID.randomUUID().toString()));
+            String name = String.valueOf(r.getOrDefault("name", id));
+            String compound = conn.getId() + "::" + nodeKey + "::" + id;   // connId::nodeKey::entityId
+            m.put("id", compound);
+            m.put("key", compound);
+            m.put("name", name);
+            m.put("type", def.getType());
+            m.put("icon", def.getIcon());
+            Map<String, Object> cfg = new LinkedHashMap<>();
+            cfg.put("type", def.getType());
+            if (def.getIcon() != null) cfg.put("icon", def.getIcon());
+            if (def.getActions() != null) cfg.put("actions", def.getActions());
+            if (def.getNextLevel() != null) {
+                cfg.put("nextLevel", def.getNextLevel());
+            } else if (!def.isVirtual() && def.getSqlQuery() != null) {
+                cfg.put("nextLevel", nodeKey);
+            }
+            m.put("config", cfg);
+            m.put("virtual", false);
+            m.put("connected", conn.getConnected() != null ? conn.getConnected() : Boolean.TRUE);
+            m.put("children", new ArrayList<>());
+            out.add(m);
+        }
+        return out;
+    }
 
-	public List<Map<String, Object>> loadExtraLevels(String connId) {
-		List<TreeNode> extras = loadExtraLevelsAsTreeNodes(connId);
-		return extras.stream().map(beanUtils::beanToMap).collect(Collectors.toList());
-	}
+    private Map<String, Object> toNodeMap(Connection conn, String key, NodeDef def, String parentId) {
+        Map<String, Object> m = new LinkedHashMap<>();
+        String id = (parentId == null)
+                ? conn.getId() + "::" + key
+                : conn.getId() + "::" + key + "::" + parentId;
+        m.put("id", id);
+        m.put("key", id);
+        m.put("name", def.getLabel() != null ? def.getLabel() : def.getType());
+        m.put("type", def.getType());
+        m.put("icon", def.getIcon());
+        Map<String, Object> cfg = new LinkedHashMap<>();
+        cfg.put("type", def.getType());
+        if (def.getIcon() != null) cfg.put("icon", def.getIcon());
+        if (def.getActions() != null) cfg.put("actions", def.getActions());
+        if (def.getNextLevel() != null) {
+            cfg.put("nextLevel", def.getNextLevel());
+        } else if (!def.isVirtual() && def.getSqlQuery() != null) {
+            cfg.put("nextLevel", key);
+        }
+        m.put("config", cfg);
+        m.put("virtual", def.isVirtual());
+        m.put("connected", conn.getConnected() != null ? conn.getConnected() : Boolean.TRUE);
+        m.put("children", new ArrayList<>());
+        return m;
+    }
 
-	private TreeNode createVirtualGroupNode(String groupKey, GroupByConfig group, String parentPath, JdbcTemplate jdbc, String connId) {
-		TreeNode groupNode = new TreeNode();
-		groupNode.setId(connId + "::group::" + groupKey);
-		groupNode.setName(group.getLabel());
-		groupNode.setType(group.getType());
-		groupNode.setVirtual(true);
-		groupNode.setIcon(group.getIcon());
-		groupNode.setConnected(true);
-		groupNode.setConfig(getActionsFromConfig(group.getActions()));
-
-		try {
-			String sql = replacePlaceholders(group.getSqlQuery(), parentPath.split("/"));
-			List<Map<String, Object>> rows = jdbc.queryForList(sql);
-			List<TreeNode> groupChildren = new ArrayList<>();
-			for (Map<String, Object> row : rows) {
-				TreeNode child = createLeafNode(row, group.getChildConfig(), parentPath + "/" + groupKey, connId);
-				groupChildren.add(child);
-			}
-			groupNode.setChildren(groupChildren);
-		} catch (Exception e) {
-			System.err.println("Load group children failed for: " + groupKey + ", error: " + e.getMessage());
-			groupNode.setChildren(Collections.emptyList());
-		}
-
-		return groupNode;
-	}
-
-	private TreeNode createLeafNode(Map<String, Object> row, Object levelConfig, String parentPath, String connId) {
-		parentPath = Objects.isNull(parentPath) ? "" : parentPath;
-		TreeNode node = new TreeNode();
-		// 优化：统一取 id 或 name，避免 null
-		String rawId = Optional.ofNullable((String) row.get("id")).orElseGet(() -> (String) row.get("name"));
-		String name = Optional.ofNullable((String) row.get("name")).orElse(rawId);
-		String uniqueKey = parentPath.isEmpty() ? rawId : parentPath + "/" + rawId;
-		node.setId(connId + "::" + uniqueKey);
-		node.setName(name);
-		// 修复：添加 ExtraLevel 支持
-		if (levelConfig instanceof Level) {
-			node.setType(((Level) levelConfig).getType());
-			node.setIcon(((Level) levelConfig).getIcon());
-		} else if (levelConfig instanceof ChildConfig) {
-			node.setType(((ChildConfig) levelConfig).getType());
-			node.setIcon(((ChildConfig) levelConfig).getIcon());
-		} else if (levelConfig instanceof ExtraLevel) {  // 新增：支持 ExtraLevel
-			node.setType(((ExtraLevel) levelConfig).getType());
-			node.setIcon(((ExtraLevel) levelConfig).getIcon());
-		} else {
-			node.setType("unknown");  // 兜底
-			node.setIcon("default_icon.svg");
-		}
-		if (row.containsKey("subType")) {
-			node.setSubType((String) row.get("subType"));
-		}
-		node.setConnected(true);
-		node.setExpanded(false);
-		node.setConfig(getActionsFromConfig(levelConfig));
-		return node;
-	}
-
-	private TreeNode toTreeNodeFromFolder(Folder folder) {
-		TreeNode node = new TreeNode();
-		node.setId(folder.getId());
-		node.setName(folder.getName());
-		node.setType(NodeType.FOLDER.getValue());
-		node.setParentId(folder.getParentId());
-		node.setExpanded(false);
-		node.setChildren(new ArrayList<>());
-		return node;
-	}
-
-	private TreeNode toTreeNode(com.deego.model.Connection conn) {
-		TreeNode node = new TreeNode();
-		node.setId(conn.getId());
-		node.setName(conn.getName());
-		node.setType(NodeType.CONNECTION.getValue());
-		node.setDbType(conn.getDbType());
-		node.setHost(conn.getHost());
-		node.setPort(conn.getPort());
-		node.setDatabase(conn.getDatabase());
-		node.setUsername(conn.getUsername());
-		node.setConnected(conn.getConnected());
-		node.setParentId(conn.getParentId());
-		node.setExpanded(false);
-		node.setChildren(new ArrayList<>());
-
-		DbConfig dbConfig = configLoader.getDbConfig(conn.getDbType());
-		if (dbConfig != null) {
-			node.setIcon(dbConfig.getIcon());
-			node.setConfig(new Actions());
-		}
-		return node;
-	}
-
-	private Level findCurrentLevel(List<Level> levels, String[] segments) {
-		int levelIndex = Math.min(segments.length, levels.size() - 1);
-		return levels.get(levelIndex);
-	}
-
-	private String replacePlaceholders(String sql, String[] segments) {
-		Map<String, String> placeholders = new HashMap<>();
-		if (segments.length >= 1) {
-			placeholders.put(PlaceholderType.DB_NAME.getKey(), segments[0]);
-		}
-		if (segments.length > 1) {
-			placeholders.put(PlaceholderType.SCHEMA_NAME.getKey(), segments[segments.length - 1]);
-		}
-		// 新增：支持 connId（从外部传入，或默认）
-		placeholders.put(PlaceholderType.CONN_ID.getKey(), "当前连接ID");
-		for (PlaceholderType placeholder : PlaceholderType.values()) {
-			String key = placeholder.getKey();
-			if (placeholders.containsKey(key)) {
-				sql = sql.replace(placeholder.getValue(), placeholders.get(key));
-			}
-		}
-		return sql;
-	}
-
-	private Actions getActionsFromConfig(Object config) {
-		if (config instanceof Level) {
-			return ((Level) config).getActions();
-		} else if (config instanceof ChildConfig) {
-			return ((ChildConfig) config).getActions();
-		} else if (config instanceof ExtraLevel) {
-			return ((ExtraLevel) config).getActions();
-		}
-		return new Actions();
-	}
-
-	private String getDbType(String connId) {
-		return connectionService.getConnection(connId)
-								.map(com.deego.model.Connection::getDbType)
-								.map(DatabaseType::fromValue)
-								.map(DatabaseType::getValue)
-								.orElse(DatabaseType.POSTGRESQL.getValue());
-	}
+    private String entityScopedId(String parentKey, String entityId, String childKey) {
+        return parentKey + "/" + entityId + "::" + childKey;
+    }
 }
